// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardNumber desktop className 1`] = `
<h4
  className="YpcCardNumber YpcCardNumber_size_compact Test"
>
  <span
    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
  >
    4390
  </span>
</h4>
`;

exports[`CardNumber desktop number 1`] = `
<h4
  className="YpcCardNumber YpcCardNumber_size_compact"
>
  <span
    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
  >
    5432
  </span>
</h4>
`;

exports[`CardNumber desktop size bulky 1`] = `
<h4
  className="YpcCardNumber YpcCardNumber_size_bulky"
>
  <span
    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_bulky"
  >
    1234
  </span>
</h4>
`;

exports[`CardNumber desktop size compact 1`] = `
<h4
  className="YpcCardNumber YpcCardNumber_size_compact"
>
  <span
    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
  >
    1234
  </span>
</h4>
`;

exports[`CardNumber touch-phone className 1`] = `
<h4
  className="YpcCardNumber YpcCardNumber_size_compact Test"
>
  <span
    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
  >
    4390
  </span>
</h4>
`;

exports[`CardNumber touch-phone number 1`] = `
<h4
  className="YpcCardNumber YpcCardNumber_size_compact"
>
  <span
    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
  >
    5432
  </span>
</h4>
`;

exports[`CardNumber touch-phone size bulky 1`] = `
<h4
  className="YpcCardNumber YpcCardNumber_size_bulky"
>
  <span
    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_bulky"
  >
    1234
  </span>
</h4>
`;

exports[`CardNumber touch-phone size compact 1`] = `
<h4
  className="YpcCardNumber YpcCardNumber_size_compact"
>
  <span
    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
  >
    1234
  </span>
</h4>
`;
